add text to file change picture

--- a/index.html
+++ b/index.html
@@ -67,43 +67,28 @@
         <div id="Slideshow_Container">
 
           <div class="mySlides fade">
-            <div class="Slide_Number">1 / 6</div>
+            <div class="Slide_Number">1 / 4</div>
             <img class="Slide_Show_Images" src="./img/me.jpg" style="width:100%">
             <div class="text">I am more than ready to assist you in your next project. Contact me below!</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="Slide_Number">2 / 6</div>
+            <div class="Slide_Number">2 / 4</div>
             <img class="Slide_Show_Images" src="./img/full-stack.jpg" style="width:75%">
             <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,
               <br>SQL, Python, C#, and more...</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="Slide_Number">3 / 6</div>
+            <div class="Slide_Number">3 / 4</div>
             <img class="Slide_Show_Images" src="./img/jquery.jpeg" style="width:75%">
             <div class="text">JQuery</div>
           </div>
 
           <div class="mySlides fade">
-            <div class="Slide_Number">4 / 6</div>
-            <img class="Slide_Show_Images" src="./img/winning.jpg" style="width:75%">
-            <div class="text">Feeling it</div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="Slide_Number">5 / 6</div>
-            <img class="Slide_Show_Images" src="./img/man_smashing_laptop.jpg" style="width:75%">
-            <div class="text">This is what happens after you spend hours getting a program to work...<br>
-              Only to find out it was a missing semicolon the whole time....</div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="Slide_Number">6 / 6</div>
-            <img class="Slide_Show_Images" src="./img/funny.jpeg" style="width:75%">
-            <div class="text">
-              <a onclick="openForm()" href="#Contact" style="color:white;">The lighter side of things.</a>
-            </div>
+            <div class="Slide_Number">4 / 4</div>
+            <img class="Slide_Show_Images" src="./img/logoAzureSql.png" style="width:75%">
+            <div class="text">SQL</div>
           </div>
 
           <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
@@ -118,8 +103,6 @@
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
           <span class="dot" onclick="currentSlide(4)"></span>
-          <span class="dot" onclick="currentSlide(5)"></span>
-          <span class="dot" onclick="currentSlide(6)"></span>
 
         </div>
       </div>
@@ -164,7 +147,7 @@
       <div class="Column_1">
         <h1>About</h2>
           <p>I am a software developer who loves to code! As a father of four,
-            I am a natural problem solver.
+            I am a natural problem solver. Attention to detail is key.
             <br><br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech
               Academy</a>’s
             Software Developer Boot Camp.<br><br>I am a full-stack developer and would
