--- a/index.html
+++ b/index.html
@@ -178,16 +178,15 @@
     <!-- End github -->
   </div>
 
-  <!-- Icons -->
+  <!-- Projects done -->
   <div class="Row">
     <div class="Column_3">
-      <h1>Programming Languages</h1>
-      <p>HTML5-CSS3<img class="icon" src="./icon/html-css.png"></p>
-      <p>JavaScript<img class="icon" src="./icon/js.png"></p>
-      <p>Python<img class="icon" src="./icon/python.png"></p>
-      <p>SQL<img class="icon" src="./icon/sql.jpg"></p>
-      <p>C#<img class="icon" src="./icon/c.jpeg"></p>
-      <p>And More...</p>
+      <h1>Projects</h1>
+      <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/pizza.html" target="_blank">Pizza Menu</a><img class="icon" src="./img/pizza.png"></p>
+      <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/TicTacToe.html" target="_blank">TicTacToe Game</a><img class="icon" src="./img/tictactoe.png"></p>
+      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/website/index.html" target="_blank">My Girls</a><img class="icon" src="./img/kids.png"></p>
+      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/boostrap_4_project/academy_cinemas.html" target="_blank">Cinema Website</a><img class="icon" src="./img/cinema.png"></p>
+      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/index_fallout.html" target="_blank">Fallout Website</a><img class="icon" src="./img/fallout.png"></p>
     </div>
     <!-- End Icons -->
 
