--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/boostrap_4_project/academy_cinemas.html" target="_blank">Cinema Website</a><img class="icon" src="./img/cinema.png"></p>
       <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/index_fallout.html" target="_blank">Fallout Website</a><img class="icon" src="./img/fallout.png"></p>
     </div>
-    <!-- End Icons -->
+    <!-- End Projects -->
 
     <!-- Contact -->
     <div class="Column_1" id="contact">
