--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
       <!-- Right column Info -->
       <div class="Column_1">
         <h1>About</h2>
-          <p>I am a software developer who loves to code! As a father of four,
-            I am a natural problem solver. Attention to detail is key.
+          <p>Software developer who loves to code!
+            A natural problem solver, Attention to detail is key.
             <br><br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech
               Academy</a>’s
-            Software Developer Boot Camp.<br><br>I am a full-stack developer and would
+            Software Developer Boot Camp.<br><br>I am very eager to continueto learn and would
             love to work with you on your project or help create something new.
             <a href="#Contact">Contact</a> me below!</p>
       </div>
@@ -182,13 +182,22 @@
   <div class="Row">
     <div class="Column_3">
       <h1>Projects</h1>
-      <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/pizza.html" target="_blank">Pizza Menu</a><img class="icon" src="./img/pizza.png"></p>
-      <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/TicTacToe.html" target="_blank">TicTacToe Game</a><img class="icon" src="./img/tictactoe.png"></p>
-      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/website/index.html" target="_blank">My Girls</a><img class="icon" src="./img/kids.png"></p>
-      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/boostrap_4_project/academy_cinemas.html" target="_blank">Cinema Website</a><img class="icon" src="./img/cinema.png"></p>
-      <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/index_fallout.html" target="_blank">Fallout Website</a><img class="icon" src="./img/fallout.png"></p>
+      <div class="Column">
+      <div class="icon">
+      <!--<p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/pizza.html" target="_blank">Pizza Menu</a>
+        <img class="icon" src="./img/pizza.png"></p>-->
+        <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/TicTacToe.html" target="_blank">TicTacToe</a>
+        <img class="icon" src="./img/tictactoe.png"></p>
+        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/website/index.html" target="_blank">My Girls</a>
+        <img class="icon" src="./img/kids.png"></p>
+        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/boostrap_4_project/academy_cinemas.html" target="_blank">Academy Cinemas</a>
+        <img class="icon" src="./img/cinema.png"></p>
+        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/index_fallout.html" target="_blank">Fallout</a>
+        <img class="icon" src="./img/fallout.png"></p>
+        </div>
+      </div>
     </div>
-    <!-- End Projects -->
+    <!-- End Icons -->
 
     <!-- Contact -->
     <div class="Column_1" id="contact">
