--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             A natural problem solver, Attention to detail is key.
             <br><br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech
               Academy</a>’s
-            Software Developer Boot Camp.<br><br>I am very eager to continueto learn and would
+            Software Developer Boot Camp.<br><br>I am very eager to continue learning and would
             love to work with you on your project or help create something new.
             <a href="#Contact">Contact</a> me below!</p>
       </div>
