Add LinkedIn to porfolio

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <a href="#slideShow">Slideshow</a>
     <a href="#github">GitHub</a>
     <a onclick="openForm()" href="#contact">Contact</a>
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" 
+    data-type="horizontal" data-theme="dark" data-vanity="pedro-suarez-b3485ba1"><a 
+    class="LI-simple-link" href='https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_top_card%3BEfqhlF3xQ3OWZt2Xlo0V5A%3D%3D'>linkedin</a></div>
+  </div>
   </div>
   <!-- End Navbar -->
 
@@ -186,13 +190,13 @@
       <div class="icon">
       <!--<p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/pizza.html" target="_blank">Pizza Menu</a>
         <img class="icon" src="./img/pizza.png"></p>-->
-        <p><a href="https://github.com/lilrob33/JavaScript_projects/blob/master/TicTacToe.html" target="_blank">TicTacToe</a>
+        <p><a href="https://lilrob33.github.io/TicTacToe/" target="_blank">TicTacToe</a>
         <img class="icon" src="./img/tictactoe.png"></p>
-        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/website/index.html" target="_blank">My Girls</a>
+        <p><a href="https://lilrob33.github.io/My-Girls/" target="_blank">My Girls</a>
         <img class="icon" src="./img/kids.png"></p>
-        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/boostrap_4_project/academy_cinemas.html" target="_blank">Academy Cinemas</a>
+        <p><a href="https://lilrob33.github.io/Academy-Cinimas/" target="_blank">Academy Cinemas</a>
         <img class="icon" src="./img/cinema.png"></p>
-        <p><a href="https://github.com/lilrob33/HTML-and-CSS/blob/master/index_fallout.html" target="_blank">Fallout</a>
+        <p><a href="https://lilrob33.github.io/Fallout/" target="_blank">Fallout</a>
         <img class="icon" src="./img/fallout.png"></p>
         </div>
       </div>
