--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a onclick="openForm()" href="#contact">Contact</a>
     <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" 
     data-type="horizontal" data-theme="dark" data-vanity="pedro-suarez-b3485ba1"><a 
-    class="LI-simple-link" href='https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_top_card%3BEfqhlF3xQ3OWZt2Xlo0V5A%3D%3D'>linkedin</a></div>
+    class="LI-simple-link" href='https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_top_card%3BEfqhlF3xQ3OWZt2Xlo0V5A%3D%3D'>linkedIn</a></div>
   </div>
   </div>
   <!-- End Navbar -->
